@@ -93,7 +93,7 @@ public class Main extends Application {
             @Override public void handle(MouseEvent event) {
                 Stage stage = new Stage();
                 try {
-                    ((Application) app.newInstance()).start(stage);
+                    ((Application) app.getDeclaredConstructor().newInstance()).start(stage);
                 } catch (Exception e) {
                     e.printStackTrace();
                 }
@@ -187,7 +187,7 @@ public class Main extends Application {
                     Info.this.setVisible(false);
                     Stage stage = new Stage();
                     try {
-                        ((Application) app.newInstance()).start(stage);
+                        ((Application) app.getDeclaredConstructor().newInstance()).start(stage);
                     } catch (Exception e) {
                         e.printStackTrace();
                     }
